--- a/allreferences.bib
+++ b/allreferences.bib
@@ -443,7 +443,7 @@
 
 @InProceedings{   DonOneBenShaetal18,
   author        = {Michele Donini and Luca Oneto and Shai Ben{-}David and John Shawe{-}Taylor and
-                  Massimiliano Pontil},
+                  Massi\-mi\-li\-ano Pontil},
   booktitle     = {Advances in Neural Information Processing Systems (NeurIPS)},
   pages         = {2796--2806},
   title         = {Empirical Risk Minimization Under Fairness Constraints},
@@ -550,7 +550,7 @@
 
 @Article{         friedler2016possibility,
   author        = {Friedler, Sorelle A and Scheidegger, Carlos and Venkatasubramanian, Suresh},
-  journal       = {arXiv preprint arXiv:1609.07236},
+  journal       = {arXiv: 1609.07236},
   title         = {On the (im) possibility of fairness},
   year          = {2016}
 }
@@ -561,13 +561,6 @@
   journal       = {arXiv preprint arXiv:1802.04422},
   title         = {A comparative study of fairness-enhancing interventions in machine learning},
   year          = {2018}
-}
-
-@Article{         FriSchVen16,
-  author        = {Sorelle A. Friedler and Carlos Scheidegger and Suresh Venkatasubramanian},
-  journal       = {arXiv preprint arXiv:1609.07236},
-  title         = {On the (im)possibility of fairness},
-  year          = {2016}
 }
 
 @Article{         ganin2016domain,
@@ -1360,7 +1353,7 @@
 
 @InProceedings{   locatello2019fairness,
   author        = {Francesco Locatello and Gabriele Abbati and Thomas Rainforth and Stefan Bauer and
-                  Bernhard Sch{\"{o}}lkopf and Olivier Bachem},
+                  Bern\-hard Sch{\"{o}}lkopf and Olivier Bachem},
   booktitle     = {Advances in Neural Information Processing Systems (NeurIPS)},
   pages         = {14584--14597},
   title         = {On the Fairness of Disentangled Representations},
@@ -2138,4 +2131,11 @@
   year = 	 {2020},
   volume = 	 {119},
   month = 	 {7},
+}
+
+@article{tarleton2010coherent,
+  title={Coherent extrapolated volition: A meta-level approach to machine ethics},
+  author={Tarleton, Nick},
+  journal={Machine Intelligence Research Institute},
+  year={2010}
 }
