--- a/paper1/paper1.tex
+++ b/paper1/paper1.tex
@@ -51,7 +51,7 @@
 $^1$ Predictive Analytics Lab (PAL), University of Sussex, Brighton, UK\\
 $^2$ BioComplex Laboratory, University of Exeter, Exeter, UK \\
 \textsc{Journal}:\;\;\textit{Frontiers in Artificial Intelligence}, Volume 3 \\
-\textsc{DOI}:\;\;10.3389/frai.2020.00033 \\
+\textsc{DOI}:\;\;\texttt{10.3389/frai.2020.00033} \\
 \textsc{Note}:\;\;The appendix has been included as section~\ref{sec:tuning-appendix}.
 
 \section{Abstract}
