--- a/paper2/paper2.tex
+++ b/paper2/paper2.tex
@@ -46,7 +46,7 @@ Thomas Kehrenberg$^1$, Myles Bartlett$^1$, Oliver Thomas$^1$, and Novi Quadriant
 \textsc{Affiliations}:\\
 $^1$ Predictive Analytics Lab (PAL), University of Sussex, Brighton, UK\\
 \textsc{Conference}:\;\;\textit{European Conference on Computer Vision} (ECCV), 2020 \\
-% \textsc{DOI}:\;\;10.3389/frai.2020.00033
+\textsc{DOI}:\;\;\texttt{10.1007/978-3-030-58574-7\_34} \\
 \textsc{Note}:\;\;The appendix has been included as section~\ref{sec:nifr-appendix}.
 
 % 70-150 words
