--- a/paper3/paper3.tex
+++ b/paper3/paper3.tex
@@ -116,8 +116,8 @@
 
 %\icmltitle{Learning with Perfect Bags:\\
 %Addressing Hidden Stratification with Zero Labelled Data}
-\textsc{Authors}:\\
-Thomas Kehrenberg$^1$, Viktoriia Sharmanska$^1$, Myles Bartlett$^1$, and Novi Quadrianto$^1$ \\
+\textsc{Authors}:
+Thomas Kehrenberg$^1$, Myles Bartlett$^1$, Novi Quadrianto$^1$ and Vik\-to\-riia Shar\-man\-s\-ka$^1$ \\
 \textsc{Affiliations}:\\
 $^1$ Predictive Analytics Lab (PAL), University of Sussex, Brighton, UK\\
 % \textsc{Conference}:\;\; Submitted to \textit{International Conference on Machine Learning} (ICML), 2021 \\
