--- a/main.tex
+++ b/main.tex
@@ -39,7 +39,7 @@ titlepage,numbers=noenddot,%1headlines,
 % (see ClassicThesis.pdf for more information):
 % ****************************************************************************************************
 \PassOptionsToPackage{
-  drafting=true,    % print version information on the bottom of the pages
+  drafting=false,    % print version information on the bottom of the pages
   tocaligned=false, % the left column of the toc will be aligned (no indentation)
   dottedtoc=true,  % page numbers in ToC flushed right
   eulerchapternumbers=true, % use AMS Euler for chapter font (otherwise Palatino)
@@ -456,7 +456,7 @@ titlepage,numbers=noenddot,%1headlines,
 % ************************************
 % \includeonly{FrontBackmatter/Contents}
 % \includeonly{ch/1-introduction}
-\includeonly{ch/2-related-work}
+% \includeonly{ch/2-related-work}
 % \includeonly{ch/3-structure}
 % \includeonly{paper1/paper1}
 % \includeonly{paper2/paper2}
