--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -100,8 +100,9 @@
     \acro{cVAE}{conditional VAE}
   \end{acronym}
 
-  \vspace{8ex}
+  % \vspace{8ex}
   % \clearpage
+  \newpage
 
   %*******************************************************
   % Nomenclature
@@ -123,7 +124,9 @@
     \entry{$\vz$}{Encoding of $\vx$}
   \end{nomenclature}
 
-  \vspace{8ex}
+  % \vspace{8ex}
+  % \clearpage
+  \newpage
 
   %*******************************************************
   % Glossary
