--- a/ch/3-structure.tex
+++ b/ch/3-structure.tex
@@ -278,7 +278,8 @@ and because demonstrating the method on tabular data provides evidence for the g
 % \section{Claims and contributions}%
 \section{List of publications and author contributions}%
 \label{sec:claims-contributions}
-This thesis is based on 3 publications, corresponding to \rangechapref{ch:paper1}{ch:paper3}.
+This thesis is based on 3 publications (one of which is a work in progress),
+corresponding to \rangechapref{ch:paper1}{ch:paper3}.
 % The first one is concerned with \emph{label bias} and the other two with \emph{sampling bias}.
 The following is a detailed listing of all the individual author contributions.
 
