--- a/main.tex
+++ b/main.tex
@@ -486,7 +486,7 @@ titlepage,numbers=noenddot,%1headlines,
 \cleardoublepage\include{FrontBackmatter/Abstract}
 % \cleardoublepage\include{FrontBackmatter/Publications}
 \cleardoublepage\include{FrontBackmatter/Declaration}
-% \cleardoublepage\include{FrontBackmatter/Acknowledgments}
+\cleardoublepage\include{FrontBackmatter/Acknowledgments}
 \cleardoublepage\include{FrontBackmatter/Contents}
 %********************************************************************
 % Mainmatter
@@ -514,7 +514,7 @@ titlepage,numbers=noenddot,%1headlines,
 
 \cleardoublepage
 \ctparttext{
-  This part comprises two peer-reviewed publications and one submitted paper currently under review.
+  This part comprises two peer-reviewed publications and one work in progress.
   They are reproduced here with minimal changes.
 }
 \part{Publications}\label{pt:main}
