--- a/FrontBackmatter/Acknowledgments.tex
+++ b/FrontBackmatter/Acknowledgments.tex
@@ -19,17 +19,9 @@
 \chapter*{Acknowledgements}
 % Joe's acknowledgements
 % I would like to start by thanking my family for all their constant encouragement: my parents Ged and Marian, my sister Dee, my niece Hannah, and my nephews Alfie and Alex. Thank-you to my wonderful partner Clemy who has been amazing and supportive of me. Thanks to everyone I have shared an office with, and last but not least, thanks to my supervisors Novi and David.
-I would like to thank first and foremost my supervisor Novi.
-He has taught me a whole lot in the time I was his PhD student and always pushed me to challenge myself.
-
-I would like to thank my wife Chao who always supported me perfectly
-and encouraged me when I was feeling down.
-I would not have made it through the PhD without her.
-
-I would like to thank my office mates Oliver and Myles
-who were always there to talk about machine learning and other things as well.
-Working together with them was an absolute joy.
-
-Finally, I thank my family who have always believed in me.
+I would like to thank my family for their support:
+my wife Chao, my parents Norbert and Felizitas, and my sister Miriam.
+Thanks to my office mates Oliver and Myles as well; it was always fun with you.
+And finally, I thank my supervisors Novi and David.
 
 \endgroup
