--- a/ch/7-discussion.tex
+++ b/ch/7-discussion.tex
@@ -241,7 +241,7 @@ Thus, such a model has to account for the wide array of human opinions and assig
 So, when asked to summarise a text \citep{stiennon2020learning}, GPT does not give the \emph{best} summary;
 rather, it gives a summary that an average person might have written.
 However, with the help of a very high-quality labelled dataset (that was expensive to create),
-it was possible to fintetune GPT to actually produce very good summaries.
+it was possible to finetune GPT to actually produce very good summaries.
 I suspect this pattern of learning the basics in an unsupervised fashion,
 and then finetuning with high-quality labels, will continue in the future.
 With these massive models,
