--- a/paper1/paper1.tex
+++ b/paper1/paper1.tex
@@ -977,8 +977,8 @@ Future work could extend our tuning approach to other fairness concepts like the
 or individual fairness~\citep{dwork2012fairness}.
 
 Furthermore, as currently formulated, the approach is only compatible with likelihood-based models
-(which covers neural networks),
-but the only real requirement is reasonably-well calibrated probabilities from the used model,
+(which covers neural networks).
+However, the only real requirement is reasonably-well calibrated probabilities from the used model,
 which are needed to compute the expected target labels.
 Thus, future work could extend it to other kinds of models, like \acp{SVM},
 for which solutions exists to transform the output to a probability;
