--- a/paper2/appendix.tex
+++ b/paper2/appendix.tex
@@ -141,7 +141,7 @@ we would recommend switching to the cFlow model once cVAE is working
 as it provides better guarantees regarding the retention of information from the input data.
 
 For choosing the network architecture,
-the only advice we have is to look at what architecture other people have used for similar data.
+the only advice we have is to look at what architectures other people have used for similar data.
 Note, however, that encoder-decoder architectures usually differ in some ways
 from classification architectures,
 due to their different goals: the goal of the former is primarily to compress and disentangle,
