--- a/paper3/paper3.tex
+++ b/paper3/paper3.tex
@@ -497,7 +497,7 @@ we use the gated attention mechanism proposed by \citet{ilse2018attention} in th
 The result of $\rho$ is then processed by a series of fully-connected layers, following the DeepSets  \citep{zaheer2017deep} paradigm, which ultimately computes a single prediction for a given bag of samples.
 
 Our goal is that $z_y$ is invariant to the subgroup $s$.
-However, what the adversarial loss actually enforces is the $z_y$ has the same distribution for the bags from the deployment set and the bags from the training set.
+However, what the adversarial loss actually enforces is that $z_y$ has the same distribution for the bags from the deployment set and the bags from the training set.
 To ensure that the network learns the correct task,
 it is crucial that subgroup membership is the only differing factor between the two types of bags.
 The first step towards this goal is that bags from the deployment set are balanced (or \emph{perfect}):
@@ -541,7 +541,7 @@ disentangling can (to an extent) also be achieved without the bag-wise loss
 (\ie, when the bag size is set to 1).
 The model then has to learn an implicit prior for which \(s\)-\(y\)-combinations to expect
 in the two different sets -- training set and deployment set.
-However, in our preliminary experiments we found this sample-wise approach to work much poorer
+However, in our preliminary experiments we found this sample-wise approach to work much more poorly
 than using a bag-wise loss.
 For those experiments, the batch was balanced in the same way as described above for the bags,
 but the batch was not subdivided into bags
@@ -901,7 +901,7 @@ We presented our approach in the context of biased data,
 but it could be used as a general-purpose method for learning disentanglements
 as long as the factors can be expressed by contrasting two data subsets;
 that is, the data will be disentangled into two factors,
-the first of which corresponding to the aspect that is common in the two sets,
+the first of which corresponds to the aspect that is common in the two sets,
 and the second corresponding to the one that differs.
 The method thus does not compete directly with \emph{unsupervised} disentanglement,
 but is potentially more widely applicable than to only fairness problems.
